Added Linux backup files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -157,6 +157,21 @@ Desktop.ini
 
 
 #############
+## Mac OS
+#############
+
+.DS_Store
+
+
+#############
+## Linux
+#############
+
+# backup files (*.bak on Win)
+*~
+
+
+#############
 ## Python
 #############
 
@@ -187,6 +202,3 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
-
-# Mac crap
-.DS_Store
